--- a/Source/AndroidMaps/AndroidManifest.xml
+++ b/Source/AndroidMaps/AndroidManifest.xml
@@ -22,5 +22,7 @@
             android:name="com.google.android.maps" />
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 
 </manifest>
