--- a/trunk/Source/AndroidMaps/AndroidManifest.xml
+++ b/trunk/Source/AndroidMaps/AndroidManifest.xml
@@ -22,16 +22,27 @@
             android:label="@string/about"
             android:name=".About" >
             <intent-filter >
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+     <action android:name="android.intent.action.VIEW" />
+     <action android:name="android.intent.action.EDIT" />
+     <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:label="@string/help"
             android:name=".Help" >
             <intent-filter >
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+		     <action android:name="android.intent.action.VIEW" />
+		     <action android:name="android.intent.action.EDIT" />
+		     <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:label="@string/option"
+            android:name=".Option" >
+            <intent-filter >
+		     <action android:name="android.intent.action.VIEW" />
+		     <action android:name="android.intent.action.EDIT" />
+		     <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <uses-library android:required="true"
