--- a/trunk/Source/AndroidMaps/AndroidManifest.xml
+++ b/trunk/Source/AndroidMaps/AndroidManifest.xml
@@ -45,6 +45,15 @@
 		     <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:label="@string/getdirection"
+            android:name=".GetDirection" >
+            <intent-filter >
+		     <action android:name="android.intent.action.VIEW" />
+		     <action android:name="android.intent.action.EDIT" />
+		     <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <uses-library android:required="true"
             android:name="com.google.android.maps" />
     </application>
