--- a/trunk/Source/AndroidMaps/AndroidManifest.xml
+++ b/trunk/Source/AndroidMaps/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity
             android:label="@string/about"
-            android:name=".About" >
+            android:name="About" >
             <intent-filter >
      <action android:name="android.intent.action.VIEW" />
      <action android:name="android.intent.action.EDIT" />
@@ -29,7 +29,7 @@
         </activity>
         <activity
             android:label="@string/help"
-            android:name=".Help" >
+            android:name = ".Help" >
             <intent-filter >
 		     <action android:name="android.intent.action.VIEW" />
 		     <action android:name="android.intent.action.EDIT" />
